modify web files

--- a/minimal-ws-server/mount-origin/index.html
+++ b/minimal-ws-server/mount-origin/index.html
@@ -1,19 +1,1 @@
-<html>
- <head>
-  <meta charset=utf-8 http-equiv="Content-Language" content="en"/>
-  <script src="/example.js"></script>
- </head>
-	<body>
-		<img src="libwebsockets.org-logo.svg">
-		<img src="strict-csp.svg"><br>
-	
-		LWS chat <b>minimal ws server example</b>.<br>
-		Chat is sent to all browsers open on this page.
-		<br>
-		<br>
-		<textarea id=r readonly cols=200 rows=10></textarea><br>
-		<input type="text" id=m cols=200 rows=1>
-		<button id=b>Send</button>
-	</body>
-</html>
-
+<!DOCTYPE html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/favicon.ico"><title>OPENXG-RB</title><link href="/css/app.50cf75ed.css" rel="preload" as="style"><link href="/css/chunk-vendors.a16c4353.css" rel="preload" as="style"><link href="/js/app.81e36668.js" rel="preload" as="script"><link href="/js/chunk-vendors.16314968.js" rel="preload" as="script"><link href="/css/chunk-vendors.a16c4353.css" rel="stylesheet"><link href="/css/app.50cf75ed.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but RB doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="/js/chunk-vendors.16314968.js"></script><script src="/js/app.81e36668.js"></script></body></html>
